--- a/app/globals.css
+++ b/app/globals.css
@@ -283,4 +283,27 @@
   .dark .hover-lift:hover {
     box-shadow: 0 20px 40px rgba(255, 255, 255, 0.05);
   }
+
+  /* Disable text selection on mobile devices */
+  @media (max-width: 768px) {
+    * {
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      -webkit-touch-callout: none;
+      -webkit-tap-highlight-color: transparent;
+    }
+
+    /* Allow text selection for input fields, textareas, and contenteditable elements */
+    input,
+    textarea,
+    [contenteditable="true"],
+    [contenteditable=""] {
+      -webkit-user-select: text;
+      -moz-user-select: text;
+      -ms-user-select: text;
+      user-select: text;
+    }
+  }
 }
